# DashSight

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README  README.md  drive-line.c  gpsfake.logfile  lap-timer.c  record-track.c  test-track
.github/workflows/: ci.yml
data/: DashSight.desktop
include/: arg-parser.h  common.h  record-track.h  track.h
misc/: DashSight.desktop  boot.scr  boot.txt  gpsd.service  obdii-test.py  pine64-sopine.dts
src/: DashSight.c  Makefile  common.c  drawing.c  drive-line.c  drive.c  lap-timer.c  main.rs  obdii.c  obdii_connect.py  obdii_loop.py  obdii_setup.py  theme.css  utils.rs
src/display/: DashSight.glade  Drive.glade  LoadMapPage.glade  RecordPage.glade  StartPage.glade  mod.rs
src/drive/: course.rs  display.rs  drive.rs  gps.rs  imu.rs  mod.rs  obdii.rs  prepare.rs  read_track.rs  temp.rs  threading.rs
src/include/: arg-parser.h  common.h  drive.h  obdii.h  obdii_commands.h  track.h
src/record/: info.rs  mod.rs  print.rs  track.rs
src/track/: line.rs  load-track.c  mod.rs  record-track.c  record.rs
tests/: drive-to-work-test  gpsfake.logfile  test-track-backyard  test-track-carpark  test-track-cowpalace  test-track-cowpalace-imu.cvs  test-track-cowpalace-saved  test-track-from-home  test-track-neighbourhood  test-track-no-movement
track/: load-track.c  record-track.c
