[package]
name = "dashsight"
repository = "https://github.com/alistair23/DashSight"
version = "0.1.0"
authors = ["Alistair Francis <alistair@alistair23.me>"]
edition = "2018"

[dependencies]
ahrs = "0.3.0"
cairo-rs = "0.9.1"
champlain = { git = "https://github.com/DashSight/champlain.git" }
chrono = "0.4.19"
cpython = "0.5.1"
dissolve = "0.2.2"
gdk = "0.13"
gdk-pixbuf = "0.9.0"
gio = "0.9.1"
glib = "0.10.2"
gpsd_proto = "0.7.0"
industrial-io = "0.2.0"
nalgebra = "0.21"
ncollide2d = "0.23"
plotters = "0.3.0"
plotters-cairo = "0.3.1"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

[dependencies.gtk]
version = "0.9.2"
features = ["v3_22"]
