[package]
name = "dashsight"
repository = "https://github.com/alistair23/DashSight"
version = "0.1.0"
authors = ["Alistair Francis <alistair@alistair23.me>"]
edition = "2018"

[dependencies]
ahrs = "0.3"
cairo-rs = "0.9"
champlain = { git = "https://github.com/DashSight/champlain.git" }
chrono = "0.4"
cpython = "0.5"
dissolve = "0.2"
gdk = "0.13"
gdk-pixbuf = "0.9"
gio = "0.9"
glib = "0.10"
gpsd_proto = "0.7"
industrial-io = "0.2"
nalgebra = "0.21"
ncollide2d = "0.23"
plotters = "0.3"
plotters-cairo = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.gtk]
version = "0.9"
features = ["v3_24"]
